--- a/Contact.html
+++ b/Contact.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav class="navbar">
-            <a href="Connexion.html">Acceuil</a>
+            <a href="Index.html">Acceuil</a>
             <a href="About.html">À propos de moi</a>
             <a href="Competence.html">Compétences / frameworks</a>
             <a href="Contact.html">Contactez-moi!</a>
